// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScaleClusterDialog /> renders correctly 1`] = `
<Modal
  className="edit-cluster-modal edit-cluster-modal-rhinfra"
  isPending={false}
  isPrimaryDisabled={false}
  isSmall={true}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Edit load balancers and persistent storage"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="load_balancers"
          label="Load balancers"
        >
          <Field
            billingModel="standard"
            cloudProviderID="aws"
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "type": [Function],
              }
            }
            currentValue={4}
            disabled={false}
            isMultiAZ={true}
            label="Load balancers"
            name="load_balancers"
            product="OSD"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="persistent_storage"
          label="Persistent storage"
        >
          <Field
            billingModel="standard"
            cloudProviderID="aws"
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "type": [Function],
              }
            }
            currentValue={107374182400}
            disabled={false}
            isMultiAZ={true}
            label="Persistent storage"
            name="persistent_storage"
            product="OSD"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
    </Grid>
  </Form>
</Modal>
`;

exports[`<ScaleClusterDialog /> renders correctly when an error occurs 1`] = `
<Modal
  className="edit-cluster-modal edit-cluster-modal-rhinfra"
  isPending={false}
  isPrimaryDisabled={false}
  isSmall={true}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Edit load balancers and persistent storage"
>
  <ErrorBox
    message="Error editing cluster"
    response={
      Object {
        "error": true,
        "errorMessage": "this is an error",
      }
    }
  />
  <Form
    onSubmit={[MockFunction]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="load_balancers"
          label="Load balancers"
        >
          <Field
            billingModel="standard"
            cloudProviderID="aws"
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "type": [Function],
              }
            }
            currentValue={4}
            disabled={false}
            isMultiAZ={true}
            label="Load balancers"
            name="load_balancers"
            product="OSD"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="persistent_storage"
          label="Persistent storage"
        >
          <Field
            billingModel="standard"
            cloudProviderID="aws"
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "type": [Function],
              }
            }
            currentValue={107374182400}
            disabled={false}
            isMultiAZ={true}
            label="Persistent storage"
            name="persistent_storage"
            product="OSD"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
    </Grid>
  </Form>
</Modal>
`;
